Fix #967 Header spacing for family chart

--- a/themes/fab/css-1.7.5/style.css
+++ b/themes/fab/css-1.7.5/style.css
@@ -445,6 +445,10 @@ a:hover .nameZoom {
 	vertical-align: bottom;
 }
 
+#family-table .subheaders:first-child {
+	width: 295px;
+}
+
 .age {
 	font-size: 9px;
 }
